Avatar Picker part 1

--- a/teletubbies/Base.lproj/Main.storyboard
+++ b/teletubbies/Base.lproj/Main.storyboard
@@ -467,6 +467,7 @@
                         <outlet property="userImg" destination="aPu-h8-uda" id="5Zm-Ak-RWP"/>
                         <outlet property="usernameTxt" destination="4wk-vn-fXg" id="oJv-zs-4BU"/>
                         <segue destination="2k6-jc-BN5" kind="unwind" identifier="unwindToChannel" unwindAction="prepareForUnwindWithSegue:" id="7Cf-6u-pki"/>
+                        <segue destination="6iP-8Q-IMh" kind="show" identifier="toAvatarPicker" id="ONQ-iI-WiQ"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="vKE-Bq-Icg" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -474,12 +475,103 @@
             </objects>
             <point key="canvasLocation" x="2832.8000000000002" y="-131.78410794602701"/>
         </scene>
+        <!--Avatar PickerVC-->
+        <scene sceneID="N4N-Yy-CS3">
+            <objects>
+                <viewController id="6iP-8Q-IMh" customClass="AvatarPickerVC" customModule="teletubbies" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="KES-f7-nNk">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="kkw-m2-Kbs">
+                                <rect key="frame" x="16" y="28" width="30" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="gMm-YJ-B5h"/>
+                                    <constraint firstAttribute="width" constant="30" id="seQ-Sd-lnJ"/>
+                                </constraints>
+                                <state key="normal" image="smackBack"/>
+                                <connections>
+                                    <action selector="backPressed:" destination="6iP-8Q-IMh" eventType="touchUpInside" id="nnj-Yu-rpB"/>
+                                </connections>
+                            </button>
+                            <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="tqg-Ez-pMh">
+                                <rect key="frame" x="107.5" y="28" width="160" height="29"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="160" id="1AN-mC-tO9"/>
+                                </constraints>
+                                <segments>
+                                    <segment title="Dark"/>
+                                    <segment title="Light"/>
+                                </segments>
+                                <color key="tintColor" red="0.35686274509999999" green="0.62352941179999999" blue="0.79607843140000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <connections>
+                                    <action selector="segmentControlChanged:" destination="6iP-8Q-IMh" eventType="valueChanged" id="Cbb-Du-lKZ"/>
+                                </connections>
+                            </segmentedControl>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="t12-fz-DDA">
+                                <rect key="frame" x="0.0" y="78" width="375" height="589"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="cTi-iG-abF">
+                                    <size key="itemSize" width="100" height="100"/>
+                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                    <inset key="sectionInset" minX="20" minY="0.0" maxX="20" maxY="0.0"/>
+                                </collectionViewFlowLayout>
+                                <cells>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="avatarCell" id="Ir6-tb-1UX" customClass="AvatarCell" customModule="teletubbies" customModuleProvider="target">
+                                        <rect key="frame" x="20" y="0.0" width="100" height="100"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
+                                            <rect key="frame" x="0.0" y="0.0" width="100" height="100"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="wdH-6S-xbz">
+                                                    <rect key="frame" x="10" y="10" width="80" height="80"/>
+                                                </imageView>
+                                            </subviews>
+                                        </view>
+                                        <constraints>
+                                            <constraint firstItem="wdH-6S-xbz" firstAttribute="leading" secondItem="Ir6-tb-1UX" secondAttribute="leading" constant="10" id="Cz9-WQ-DNs"/>
+                                            <constraint firstAttribute="bottom" secondItem="wdH-6S-xbz" secondAttribute="bottom" constant="10" id="UuO-oA-fRf"/>
+                                            <constraint firstAttribute="trailing" secondItem="wdH-6S-xbz" secondAttribute="trailing" constant="10" id="fU9-t7-UzO"/>
+                                            <constraint firstItem="wdH-6S-xbz" firstAttribute="top" secondItem="Ir6-tb-1UX" secondAttribute="top" constant="10" id="oXe-dV-7ep"/>
+                                        </constraints>
+                                        <connections>
+                                            <outlet property="avatarImg" destination="wdH-6S-xbz" id="i4G-F9-gMj"/>
+                                        </connections>
+                                    </collectionViewCell>
+                                </cells>
+                            </collectionView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="t12-fz-DDA" firstAttribute="leading" secondItem="rtc-hM-mbA" secondAttribute="leading" id="AoU-Fn-xqp"/>
+                            <constraint firstItem="tqg-Ez-pMh" firstAttribute="centerX" secondItem="KES-f7-nNk" secondAttribute="centerX" id="E2l-gK-ofl"/>
+                            <constraint firstItem="tqg-Ez-pMh" firstAttribute="top" secondItem="rtc-hM-mbA" secondAttribute="top" constant="8" id="Q6H-Fb-9Tp"/>
+                            <constraint firstItem="kkw-m2-Kbs" firstAttribute="leading" secondItem="rtc-hM-mbA" secondAttribute="leading" constant="16" id="RnE-Pe-9Cz"/>
+                            <constraint firstItem="kkw-m2-Kbs" firstAttribute="top" secondItem="rtc-hM-mbA" secondAttribute="top" constant="8" id="SPS-oU-7vt"/>
+                            <constraint firstItem="rtc-hM-mbA" firstAttribute="trailing" secondItem="t12-fz-DDA" secondAttribute="trailing" id="Vyt-TF-hYf"/>
+                            <constraint firstItem="t12-fz-DDA" firstAttribute="top" secondItem="kkw-m2-Kbs" secondAttribute="bottom" constant="20" id="XS1-xf-2IN"/>
+                            <constraint firstItem="rtc-hM-mbA" firstAttribute="bottom" secondItem="t12-fz-DDA" secondAttribute="bottom" id="nIP-Ze-ERn"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="rtc-hM-mbA"/>
+                    </view>
+                    <connections>
+                        <outlet property="collectionView" destination="t12-fz-DDA" id="bEe-FI-cTs"/>
+                        <outlet property="segmentController" destination="tqg-Ez-pMh" id="9uV-dt-0pS"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="4iJ-hT-ba9" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="3664.8000000000002" y="-131.78410794602701"/>
+        </scene>
     </scenes>
     <resources>
         <image name="addChannelButton" width="22" height="22"/>
         <image name="closeButton" width="28" height="28"/>
         <image name="menuProfileIcon" width="99" height="99"/>
         <image name="profileDefault" width="192" height="192"/>
+        <image name="smackBack" width="28" height="28"/>
         <image name="smackBurger" width="40" height="40"/>
         <image name="smackLogo" width="48" height="40"/>
     </resources>
