--- a/teletubbies/Base.lproj/Main.storyboard
+++ b/teletubbies/Base.lproj/Main.storyboard
@@ -116,7 +116,7 @@
                                     <action selector="loginBtnPressed:" destination="Ihp-7A-MrH" eventType="touchUpInside" id="wyr-rI-h6T"/>
                                 </connections>
                             </button>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="menuProfileIcon" translatesAutoresizingMaskIntoConstraints="NO" id="n86-Ou-xHh">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="menuProfileIcon" translatesAutoresizingMaskIntoConstraints="NO" id="n86-Ou-xHh" customClass="RoundedImage" customModule="teletubbies" customModuleProvider="target">
                                 <rect key="frame" x="16" y="572" width="75" height="75"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="75" id="d1o-U0-5sv"/>
@@ -418,7 +418,7 @@
                                     </view>
                                 </subviews>
                             </stackView>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="profileDefault" translatesAutoresizingMaskIntoConstraints="NO" id="aPu-h8-uda">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="profileDefault" translatesAutoresizingMaskIntoConstraints="NO" id="aPu-h8-uda" customClass="RoundedImage" customModule="teletubbies" customModuleProvider="target">
                                 <rect key="frame" x="138" y="299" width="100" height="100"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="100" id="RG9-t5-PdB"/>
@@ -440,6 +440,10 @@
                                     <action selector="pickBGColorPressed:" destination="KLt-lk-trA" eventType="touchUpInside" id="AdN-JW-6aY"/>
                                 </connections>
                             </button>
+                            <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" style="whiteLarge" translatesAutoresizingMaskIntoConstraints="NO" id="g0p-cL-MAZ">
+                                <rect key="frame" x="169" y="215" width="37" height="37"/>
+                                <color key="color" red="0.25882352939999997" green="0.3294117647" blue="0.72549019609999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                            </activityIndicatorView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
@@ -450,6 +454,7 @@
                             <constraint firstItem="A6b-8G-Ano" firstAttribute="top" secondItem="BUs-sq-5oT" secondAttribute="top" constant="40" id="9y0-KN-xnz"/>
                             <constraint firstItem="aPu-h8-uda" firstAttribute="centerX" secondItem="HN5-Ql-qxh" secondAttribute="centerX" id="Hkz-eT-PB3"/>
                             <constraint firstItem="aPu-h8-uda" firstAttribute="top" secondItem="gCN-WC-Huc" secondAttribute="bottom" constant="40" id="NSD-Uo-vOQ"/>
+                            <constraint firstItem="g0p-cL-MAZ" firstAttribute="centerY" secondItem="HN5-Ql-qxh" secondAttribute="centerY" constant="-100" id="Nwt-sU-Iev"/>
                             <constraint firstItem="6DW-YZ-hgI" firstAttribute="top" secondItem="aPu-h8-uda" secondAttribute="top" id="OXi-Al-r0A"/>
                             <constraint firstItem="BUs-sq-5oT" firstAttribute="trailing" secondItem="NTG-V0-ee4" secondAttribute="trailing" constant="16" id="Ojt-c3-3Pd"/>
                             <constraint firstItem="A6b-8G-Ano" firstAttribute="centerX" secondItem="HN5-Ql-qxh" secondAttribute="centerX" id="TiB-Ic-Oc7"/>
@@ -457,6 +462,7 @@
                             <constraint firstItem="KEr-VK-Eyj" firstAttribute="top" secondItem="6DW-YZ-hgI" secondAttribute="bottom" constant="4" id="mQR-aj-YV9"/>
                             <constraint firstItem="KEr-VK-Eyj" firstAttribute="centerX" secondItem="HN5-Ql-qxh" secondAttribute="centerX" id="nEW-Vl-svZ"/>
                             <constraint firstItem="m8q-9x-irp" firstAttribute="centerX" secondItem="HN5-Ql-qxh" secondAttribute="centerX" id="ngy-5u-QOe"/>
+                            <constraint firstItem="g0p-cL-MAZ" firstAttribute="centerX" secondItem="HN5-Ql-qxh" secondAttribute="centerX" id="njh-tn-csh"/>
                             <constraint firstItem="gCN-WC-Huc" firstAttribute="centerX" secondItem="HN5-Ql-qxh" secondAttribute="centerX" id="pc3-wm-m2h"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="BUs-sq-5oT"/>
@@ -464,6 +470,7 @@
                     <connections>
                         <outlet property="emailTxt" destination="LSy-zk-Seu" id="Pdj-32-MGy"/>
                         <outlet property="passwordTxt" destination="WLx-6U-N7I" id="aAD-VH-9AA"/>
+                        <outlet property="spinner" destination="g0p-cL-MAZ" id="Lsv-p3-Orc"/>
                         <outlet property="userImg" destination="aPu-h8-uda" id="5Zm-Ak-RWP"/>
                         <outlet property="usernameTxt" destination="4wk-vn-fXg" id="oJv-zs-4BU"/>
                         <segue destination="2k6-jc-BN5" kind="unwind" identifier="unwindToChannel" unwindAction="prepareForUnwindWithSegue:" id="7Cf-6u-pki"/>
